assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

/* GLOBAL STYLE */
body {
  font-family: Urbanist, sans-serif;
  position: relative;
  padding-top: 3rem;
  padding-bottom: 3rem;
  color: #5a5a5a;
}
.w-rule {
  color: tomato;
}
.btn:hover {
  background-color: tomato;
}
.btn, .btn-lg, .btn-primary {
  color: #5a5a5a;
  background-color: white;
  border: 1px solid tomato;
}
.featurette-divider {
  margin: 5rem 0;
}
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -.05rem;
}
.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.fa-angle-up {
  color: tomato;
}

/* NAVIGATION BAR ELEMENT */
#logo {
  font-size: 2em;
}
#navbarCollapse {
  flex-grow: 0;
}
.nav-link:hover {
  color: tomato !important; 
}

/* CAROUSEL SECTION */


/* MUSIC SECTION */
.row h1 {
  text-align: center;
}
.marketing .col-lg-4 {
  margin-top: 50px;
  margin-bottom: 1.5rem;
  text-align: center;
}
.marketing h2 {
  font-size: 2em;
}
.marketing .col-lg-4 p {
  margin-right: .75rem;
  margin-left: .75rem;
}
.fa-spotify {
  color: rgb(24, 180, 24);
  font-size: 80px;
}
.fa-itunes {
  color: rgb(214, 75, 75);
  font-size: 80px;
}
.fa-amazon {
  color: rgb(201, 131, 2);
  font-size: 80px;
}

/* VIDEO SECTION */
#video-block > div {
  display: inline-block;
}
.video-sec > h1 {
  text-align: center;
  padding-top: -80px;
}
.video-sec > div {
  margin-top: 50px;
  display: inline-block;
}

#v1, #v2, #v3 {
  border: 0;
}

/* GALLERY SECTION */
.gallery-h {
  text-align: center;
  padding-bottom: 50px;
}

/* BIOGRAPHY SECTION */
.col-md-5 img {
  object-fit: cover;
}
.bio-h {
  text-align: center;
  padding-bottom: 50px;
}
.float-end a {
  text-decoration: none;
  color: #5a5a5a;
}
.bio-pics {
  width: 400px;
  height: 400px;
}
/* FOOTER SECTION*/
.socials {
  text-align: center;
}
.socials ul {
  position: relative;
}
.socials li {
  padding: 15px;
  display: inline;
  list-style-type: none;
}
.socials a {
  font-size: 25px;
  color:rgb(82, 80, 80)
}
.socials a:hover {
  color: tomato;
}
.footer-spotify {
  font-size: 25px;
  color:rgb(82, 80, 80);
}
.footer-spotify:hover {
  color: tomato;
}

/*FORM SECTION */
#contact-sec {
  width: 100%;
  height: 720px;
  margin-top: 5%;
}
.cont-h h1 {
  margin: 0 0 20px;
  font-weight: 400;
  text-align: center;
}
.cont-p p {
  margin: 0 0 5px;
}
.main-block {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}
form {
  padding: 25px;
  margin: 25px;
  margin-bottom: 20%;
  box-shadow: 0 2px 5px #f5f5f5; 
  background: #f5f5f5; 
}   
input, textarea {
  width: calc(100%);
  padding: 8px;
  margin-bottom: 20px;
  border: 1px solid tomato;
  outline: none;
}
input::placeholder {
  color: #666;
}
#sub-but {
  width: 100%;
  padding: 10px;
  border: none;
  background: tomato; 
  font-size: 16px;
  font-weight: 400;
  color: black;
  }
#sub-but:hover {
  background: rgb(189, 33, 5);
}

/* RESPONSIVE CSS */
@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
  .socials {
    text-align: center;
  }
}

@media (min-width: 40em) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 1.25rem;
    font-size: 1.25rem;
    line-height: 1.4;
  }
  .featurette-heading {
    font-size: 50px;
  }
  .socials {
    text-align: center;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
    margin-top: 7rem;
  }
  .socials {
    text-align: center;
  }
}

@media screen and (min-width: 1440px) {
  .col-md-12 {
    columns: 3;
    grid-row: 3;
  }
  .socials {
    text-align: center;
  }
}

@media screen and (min-width: 768px) {
  .col-md-12 {
    text-align: center;
    grid-row: 3;
  }
  #video-block {
    text-align: center;
  }
  .socials {
    text-align: center;
  }
}

